<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bgColor"
    android:padding="@dimen/default_padding_medium"
    tools:context="ui.search.SearchFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tvFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding_medium"
            android:layout_marginTop="@dimen/default_padding_medium"
            android:background="@drawable/gray_rectangle_large"
            android:drawableLeft="@drawable/ic_from"
            android:hint="@string/from" />
        <!--</android.support.v7.widget.CardView>-->

        <EditText
            android:id="@+id/tvTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding_medium"
            android:layout_marginTop="@dimen/default_padding_medium"
            android:background="@drawable/gray_rectangle_large"
            android:drawableLeft="@drawable/ic_to_destination"
            android:hint="@string/to" />


        <EditText
            android:id="@+id/tvkilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding_medium"
            android:layout_marginTop="@dimen/default_padding_medium"
            android:background="@drawable/gray_rectangle_large"
            android:drawableLeft="@drawable/ic_scale"
            android:hint="@string/weight" />


        <EditText
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding_medium"
            android:layout_marginTop="@dimen/default_padding_medium"
            android:background="@drawable/gray_rectangle_large"
            android:drawableLeft="@drawable/ic_date"
            android:hint="@string/Date" />
    </LinearLayout>

    <Button
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BUTTON_DEFAULT_BLACK_BOLD"
        android:text="@string/Search" />

</FrameLayout>
